# ProspectIQ

./: .gitignore  .pre-commit-config.yaml  README.md
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py  database.py  errors.py  logging.py  middleware.py  security.py
apps/api/app/modules/admin/: api.py  models.py  schemas.py  service.py
apps/api/app/modules/ai_analysis/: adapters.py  api.py  models.py  prompt_builder.py  repository.py  schemas.py  service.py  service_catalog.py  validator.py
apps/api/app/modules/audit_logs/: __init__.py  api.py  models.py  repository.py  schemas.py  service.py
apps/api/app/modules/auth/: api.py  exceptions.py  models.py  permissions.py  (+4 more)
apps/api/app/shared/: __init__.py
apps/api/migrations/: README.md  env.py
apps/api/migrations/versions/: 0001_initial.py  0002_schema_extensions.py  0003_roles_and_search_filters.py  0004_outreach_versions.py  0005_auth_billing_workspace_refactor.py
apps/api/scripts/: check_database_connection.py  seed.py
apps/api/tests/: conftest.py  test_admin_api.py  test_ai_workflows.py  test_auth_api.py  test_auth_policies.py  test_billing_api.py  test_core.py  test_export_service.py  test_health.py  test_lead_activity.py  test_lead_discovery_orchestrator.py  test_lead_refresh_orchestrator.py  test_leads_api.py  test_leads_filters.py  test_provider_hardening.py  test_saas_account_system.py  test_scoring_engine.py  test_search_job_service.py  test_search_jobs_api.py  test_workspace_e2e.py
(+238 files in other folders)
